# dd-trace-rs

./: .gitignore  .gitlab-ci.yml  .rumdl.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  LICENSE-3rdparty.csv  LICENSE-3rdparty.yml  README.md  cliff.toml  debug_remote_config.rs  docker-compose.yml  license-tool.toml  out.txt  pushed  run_remote_config_test.sh  squat.sh  summary.md  supported-configurations.json  test_request.json  to_squat
.cargo/: config.toml
contrib/aws_sdk_sqs/: Cargo.toml
contrib/aws_sdk_sqs/src/: lib.rs
datadog-opentelemetry/: CHANGELOG.md  Cargo.toml
datadog-opentelemetry-benches/: Cargo.toml  README.md
datadog-opentelemetry-benches/benches/: dd_otel_tracer_comparison.rs
datadog-opentelemetry-mappings/: Cargo.toml
datadog-opentelemetry-mappings/benches/: main.rs
datadog-opentelemetry-mappings/src/: cached_config.rs  lib.rs  sdk_span.rs
datadog-opentelemetry-mappings/src/transform/: attribute_keys.rs  mod.rs  otel_util.rs  transform_tests.rs
datadog-opentelemetry/benches/: datadog_sampling_benchmark.rs  dd_otel_tracer_comparison.rs  extract_benchmark.rs  inject_benchmark.rs  mappings_benchmark.rs  otel_sampling_benchmark.rs  smoke.rs
datadog-opentelemetry/examples/: README.md  remote_config.rs  simple_tracing.rs
datadog-opentelemetry/examples/propagator/: Cargo.toml
datadog-opentelemetry/examples/propagator/src/: server.rs
datadog-opentelemetry/examples/remote_config_test/: Cargo.toml  README.md
datadog-opentelemetry/examples/remote_config_test/src/: main.rs
datadog-opentelemetry/examples/simple_tracing/: Cargo.toml
datadog-opentelemetry/examples/simple_tracing/src/: main.rs
datadog-opentelemetry/examples/tokio_timeline/: Cargo.toml
datadog-opentelemetry/examples/tokio_timeline/src/: connection_pool.rs  main.rs  mutex_contention.rs  producer_consumer.rs  simple.rs
datadog-opentelemetry/examples/tracing-http-propagator/: Cargo.toml
datadog-opentelemetry/examples/tracing-http-propagator/src/: client.rs  server.rs
datadog-opentelemetry/src/: abandoned_traces.rs  ddtrace_transform.rs  lib.rs  logs_reader.rs  memory_profiling.rs  metrics_exporter.rs  metrics_reader.rs  otel_trace_transform.rs  otlp_utils.rs  sampler.rs  span_conversion.rs  span_exporter.rs  span_processor.rs  spans_metrics.rs  telemetry_logs_exporter.rs  telemetry_metrics_exporter.rs  text_map_propagator.rs  thread_ctx.rs  trace_id.rs
datadog-opentelemetry/src/core/: constants.rs  error.rs  log.rs  mod.rs  sampling.rs  telemetry.rs  telemetry_session.rs  test_utils.rs
datadog-opentelemetry/src/exporter/: mod.rs
datadog-opentelemetry/src/mappings/: cached_config.rs  mod.rs
datadog-opentelemetry/src/propagation/: b3.rs  b3multi.rs  baggage.rs  carrier.rs  config.rs  context.rs  datadog.rs  error.rs  mod.rs  trace_propagation_style.rs  tracecontext.rs
datadog-opentelemetry/src/sampling/: agent_service_sampler.rs  datadog_sampler.rs  mod.rs  otel_mappings.rs  rate_limiter.rs  rate_sampler.rs  rules_sampler.rs  sampling_rule.rs  types.rs
datadog-opentelemetry/src/tokio_timeline/: buffer.rs  config.rs  mod.rs  uploader.rs  worker.rs  writer.rs
datadog-opentelemetry/src/transform/: attribute_keys.rs  mod.rs  otel_util.rs  semconv.rs  transform_tests.rs
datadog-opentelemetry/tests/: mod.rs
datadog-opentelemetry/tests/integration_tests/: logs.rs  metrics.rs  mod.rs  opentelemetry_api.rs  telemetry_shutdown.rs  traces_otlp.rs  tracing_api.rs
datadog-opentelemetry/tests/snapshots/: test_injection_extraction.json  test_injection_extraction_tracestats.json  test_received_traces.json  test_received_traces_tracestats.json  test_remote_config_sampling_rates.json  test_sampling_extraction.json
dd-trace/: Cargo.toml
dd-trace-propagation/: Cargo.toml
dd-trace-propagation/benches/: extract_benchmark.rs  inject_benchmark.rs
dd-trace-propagation/src/: carrier.rs  config.rs  context.rs  datadog.rs  error.rs  lib.rs  log.rs  text_map_propagator.rs  trace_propagation_style.rs  tracecontext.rs
dd-trace-propagation/src/common/: log.rs  mod.rs
dd-trace-sampling/: Cargo.toml
dd-trace-sampling/src/: agent_service_sampler.rs  attribute_keys.rs  config.rs  constants.rs  datadog_sampler.rs  glob_matcher.rs  lib.rs  otel_mappings.rs  otel_utils.rs  rate_limiter.rs  rate_sampler.rs  rules_sampler.rs  sampler.rs  utils.rs
dd-trace/examples/: remote_config.rs
dd-trace/src/: configuration.rs  constants.rs  lib.rs  log.rs  sampling.rs  telemetry.rs
dd-trace/src/configuration/: configuration.rs  mod.rs  remote_config.rs  sources.rs  supported_configurations.rs
examples/: Cargo.toml
examples/src/: main.rs
instrumentation/: Cargo.toml
instrumentation/aws/: Cargo.toml
instrumentation/aws/datadog-aws/: Cargo.toml
instrumentation/aws/datadog-aws-lambda/: Cargo.toml
instrumentation/datadog-aws/: Cargo.toml
instrumentation/datadog-aws-core/: Cargo.toml
instrumentation/datadog-aws-core-test-utils/: Cargo.toml
instrumentation/datadog-aws-core-test-utils/src/: integration_test_helpers.rs  lib.rs  test_helpers.rs
instrumentation/datadog-aws-core/src/: attribute_keys.rs  interceptor.rs  lib.rs  limits.rs  request_span.rs
instrumentation/datadog-aws-eventbridge/: Cargo.toml
instrumentation/datadog-aws-eventbridge/src/: lib.rs
instrumentation/datadog-aws-eventbridge/tests/: integration.rs
instrumentation/datadog-aws-lambda/: Cargo.toml
instrumentation/datadog-aws-lambda/src/: attribute_keys.rs  invocation.rs  lib.rs
instrumentation/datadog-aws-sns/: Cargo.toml
instrumentation/datadog-aws-sns/src/: lib.rs
instrumentation/datadog-aws-sns/tests/: integration.rs
instrumentation/datadog-aws-sqs/: Cargo.toml
instrumentation/datadog-aws-sqs/src/: lib.rs
instrumentation/datadog-aws-sqs/tests/: integration.rs
integrations/aws/aws-sdk-rust/: Cargo.toml  README.md
integrations/aws/datadog-aws-sdk/: Cargo.toml
integrations/aws/datadog-lambda-rs/: .gitignore  CLAUDE.md  Cargo.toml  README.md
placeholder/: Cargo.toml
placeholder/src/: lib.rs
tools/: Cargo.toml
tools/src/: junit_file_attributes.rs  lib.rs
(+181 files in other folders)
