# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "datadog-opentelemetry",
    "datadog-opentelemetry/examples/propagator",
    "datadog-opentelemetry/examples/simple_tracing",
    "tools",
]

# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

[workspace.package]
rust-version = "1.87.0"
edition = "2021"
version = "0.4.0"
license = "Apache-2.0"
repository = "https://github.com/DataDog/dd-trace-rs"
readme = "README.md"
description = "Reserved future DataDog package, contact info@datadoghq.com if you think this package name shouldn't be used."
authors = ["Datadog Inc. <info@datadoghq.com>"]

[workspace.dependencies]
# Libdatadog dependencies
libdd-data-pipeline = { version = "7.0.0", features = [
    "stats-obfuscation",
    "telemetry",
], default-features = false }
libdd-trace-utils = { version = "9.0.0", default-features = false }
libdd-capabilities-impl = { version = "3.0.0", default-features = false }
libdd-telemetry = { version = "6.0.0", default-features = false }
libdd-common = { version = "5.1.0", default-features = false }
libdd-tinybytes = { version = "1.1.1", default-features = false }
libdd-library-config = { version = "3.0.0", default-features = false }
libdd-sampling = { version = "5.0.0", default-features = false }
libdd-shared-runtime = { version = "2.0.0", default-features = false }
libdd-remote-config = { version = "2.0.0", default-features = false, features = [
    "client",
] }
opentelemetry_sdk = { version = "0.32.1", features = [
    "trace",
    "metrics",
    "logs",
], default-features = false }
opentelemetry = { version = "0.32.0", features = [
    "trace",
    "metrics",
    "logs",
], default-features = false }
opentelemetry-otlp = { version = "0.32.0", features = [
    "metrics",
    "logs",
], default-features = false }
opentelemetry-semantic-conventions = { version = "0.32.0", features = [
    "semconv_experimental",
] }
tokio = { version = "1.44.1" }
rand = { version = "0.8", features = ["small_rng"] }

serde = { version = "1.0.194" }
serde_json = { version = "1.0.140" }

hashbrown = { version = "0.15.5" }
foldhash = { version = "0.1.5" }

[profile.dev]
debug = 2 # full debug info

[profile.bench]
codegen-units = 1
debug = false
incremental = false
opt-level = 3

