[package]
name = "datadog-opentelemetry-benches"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Benchmarks for datadog-opentelemetry crate"

[dependencies]
# Workspace dependencies
dd-trace = { path = "../dd-trace" }
datadog-opentelemetry = { path = "../datadog-opentelemetry" }

# External dependencies
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio = { workspace = true }
futures = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry = { workspace = true }

# HTTP/Web dependencies for benchmarks
axum = "0.7"
axum-server = "0.7.2"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
opentelemetry-http = "0.28"
opentelemetry-otlp = "0.28"
opentelemetry-stdout = "0.28"

# Additional dependencies
ctor = "0.4.2"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "dd_otel_tracer_comparison"
harness = false 