# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-opentelemetry-mappings"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }

# Libdatadog dependencies
datadog-trace-utils = { workspace = true }
tinybytes = { workspace = true }

dd-trace = { path = "../dd-trace" }

[dev-dependencies]
criterion = "0.5.1"
datadog-opentelemetry-mappings = { path = "./", features = ["test-utils"] }
stats_alloc = { version = "0.1.10" }

[features]
test-utils = []

[[bench]]
name = "main"
harness = false
path = "benches/main.rs"
features = ["test-utils"]
