[package]
name = "datadog-opentelemetry"
repository = "https://github.com/DataDog/dd-trace-rs/tree/main/datadog-opentelemetry"
description = "A Datadog layer of compatibility for the opentelemetry SDK"
# rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]

# External dependencies
foldhash = { workspace = true }
hashbrown = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-otlp = { workspace = true, features = [
    "metrics",
], default-features = false, optional = true }
rand = { workspace = true }
serde_json = { workspace = true }

# sampling
lru = "0.13"
serde = { workspace = true, features = ["derive"] }

# propagation
thiserror = { version = "1.0", default-features = false }


# core
anyhow = "1.0.97"
rustc_version_runtime = "0.3.0"
hyper = { version = "1.6", features = ["client", "http1"] }
hyper-util = { version = "0.1.16", features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
] }
http-body-util = "0.1"
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tokio-util = "0.7"
base64 = "0.21"
sha2 = "0.10"
uuid = { version = "1.11.0", features = ["v4"] }
arc-swap = "1.7.1"

# core Test utils
criterion = { version = "0.5.1", optional = true }

# Libdatadog dependencies
libdd-data-pipeline = { workspace = true }
libdd-trace-utils = { workspace = true }
libdd-telemetry = { workspace = true }
libdd-common = { workspace = true }

[dev-dependencies]
assert_unordered = "0.3"
pretty_assertions = "1.4.1"
proptest = {version = "1.9", features = ["std"], default-features = false}
test-case = "3.3.1"
tokio = { workspace = true }

# Libdatadog dependencies - change to a stable version once we release
libdd-trace-utils = { workspace = true, features = ["test-utils"] }

# Depend on ourselves to have APIs exposed only during tests
datadog-opentelemetry = { path = ".", features = ["test-utils"] }

# Testing the tracing API
tracing = { version = "0.1.4" }
tracing-opentelemetry = { version = "0.32" }
tracing-subscriber = { version = "0.3" }

# Benchmarking
criterion = "0.5.1"

[features]
default = ["metrics-grpc"]
metrics-grpc = ["opentelemetry-otlp", "opentelemetry-otlp/grpc-tonic"]
metrics-http = ["opentelemetry-otlp", "opentelemetry-otlp/http-proto", "opentelemetry-otlp/reqwest-blocking-client"]
test-utils = ["libdd-data-pipeline/test-utils", "criterion", "metrics-grpc", "metrics-http"]

[[bench]]
name = "smoke"
harness = false
path = "benches/smoke.rs"

[[bench]]
name = "mappings_benchmark"
harness = false
path = "benches/mappings_benchmark.rs"

[[bench]]
name = "inject_benchmark"
harness = false
path = "benches/inject_benchmark.rs"

[[bench]]
name = "extract_benchmark"
harness = false
path = "benches/extract_benchmark.rs"
