[package]
name = "dd-trace-propagation"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
lazy_static = { version = "1.5", default-features = false }
thiserror = { version = "1.0", default-features = false}
regex = { version = "1.10", default-features = false, features = ["unicode-case"] }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, optional = true, features = ["alloc"] }

[features]
default = []
serde_config = ["serde", "serde_json"]

