# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dd-trace-sampling"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true, features = ["trace"] }
opentelemetry-semantic-conventions = { version = "0.15.0" }
lru = "0.10.1"
regex = "1.10.3"
dd-trace = { path = "../dd-trace" }

[dev-dependencies]
# Add any testing dependencies here if needed

[features]
default = []
