# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dd-trace"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
uuid = { version = "1.11.0", features = ["v4"] }
anyhow = "1.0.97"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"
sha2 = "0.10"

[features]
test-utils = []

[[example]]
name = "remote_config"
path = "examples/remote_config.rs"
