# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = ["datadog-aws", "datadog-aws-lambda"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
rust-version = "1.91.1"
license = "Apache-2.0"
repository = "https://github.com/DataDog/dd-trace-rs"
authors = ["Datadog Inc. <info@datadoghq.com>"]
publish = false
