# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-aws-core-test-utils"
description = "Shared test infrastructure for Datadog AWS instrumentation crates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
aws-credential-types = { version = "1", features = ["test-util"] }
aws-smithy-runtime-api = { workspace = true }
aws-types = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["trace", "testing"] }
wiremock = "0.6"
