# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-aws-core"
description = "Internal shared interceptor machinery for Datadog AWS instrumentation crates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
test-utils = [
    "dep:aws-credential-types",
    "dep:opentelemetry_sdk",
    "dep:wiremock",
]

[dependencies]
aws-smithy-runtime-api = { workspace = true }
aws-smithy-types = { workspace = true }
aws-types = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }

# Optional deps enabled by the test-utils feature
aws-credential-types = { version = "1", features = ["test-util"], optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "testing"], optional = true }
wiremock = { version = "0.6", optional = true }
