# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-aws-lambda"
description = "Datadog distributed tracing for AWS Lambda."
version = "0.1.0"
edition.workspace = true
rust-version = "1.85.0"
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
datadog-opentelemetry = { version = "0.5", path = "../../datadog-opentelemetry" }
lambda_runtime = "0.13"
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["trace", "metrics", "logs"] }
tracing = { workspace = true }

[dev-dependencies]
datadog-opentelemetry = { version = "0.5", path = "../../datadog-opentelemetry", features = ["test-utils"] }
opentelemetry_sdk = { workspace = true, features = ["trace", "metrics", "logs", "testing"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
