# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-aws-sqs"
description = "Datadog trace context injection for AWS SDK for Rust SQS operations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
datadog-aws-core = { workspace = true }
aws-sdk-sqs = "1.97.0"
aws-smithy-runtime-api = { workspace = true }
aws-smithy-types = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }

[dev-dependencies]
datadog-aws-core = { workspace = true, features = ["test-utils"] }
aws-credential-types = { version = "1", features = ["test-util"] }
aws-types = { workspace = true }
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
opentelemetry_sdk = { workspace = true, features = ["trace", "testing"] }
serial_test = "3"
tokio = { workspace = true, features = ["rt", "macros", "net", "io-util"] }
