[package]
name = "simple_tracing"
version = "0.2.0"
edition = "2021"
publish = false
autobenches = false

[[bin]]
name = "simple_tracing"
path = "src/main.rs"
doc = false
bench = false

[dependencies]
datadog-opentelemetry = { path = "../../../datadog-opentelemetry" }
opentelemetry = { workspace = true }
